# cppcourse-brunel

./: CMakeLists.txt  Doxyfil.in  README.md  constants.hpp  main1.cpp  network.cc  network.hpp  neuron  neuron.cc  neuron.hpp  neuron_unittest.cpp  spikes.gdf  spikes.txt
html/: annotated.html  classNetwork-members.html  classNetwork.html  classNeuron-members.html  classNeuron.html  classes.html  constants_8hpp_source.html  files.html  functions.html  functions_func.html  index.html  md_README.html  network_8hpp_source.html  neuron_8hpp_source.html  pages.html
html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  functions_4.js  functions_6.js  search.js
latex/: annotated.tex  classNetwork.tex  classNeuron.tex  md_README.tex  refman.tex
